[gd_scene load_steps=8 format=2]

[ext_resource path="res://KeysMarginContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://player.png" type="Texture" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://StageTransitionManager.gd" type="Script" id=4]
[ext_resource path="res://StageManager.gd" type="Script" id=5]
[ext_resource path="res://TimeLabel.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 43.151

[node name="Main" type="Node2D"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="StageLabel" parent="UI" instance=ExtResource( 6 )]
text = "Stage 1"

[node name="GameWorld" type="CanvasLayer" parent="."]

[node name="StageManager" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Player" type="Area2D" parent="." groups=[
"goal_piece",
]]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
limit_left = 0
limit_top = 0
limit_right = 1800
limit_bottom = 900
smoothing_enabled = true
smoothing_speed = 2.0

[node name="StageTransitionManager" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="KeysMarginContainer" parent="StageTransitionManager" instance=ExtResource( 1 )]
margin_right = 1800.0
margin_bottom = 900.0

[node name="KeysMarginContainerFake" parent="StageTransitionManager" instance=ExtResource( 1 )]
visible = false
margin_right = 1800.0
margin_bottom = 900.0

[node name="TransitionTween" type="Tween" parent="StageTransitionManager"]
[connection signal="new_position" from="StageTransitionManager/KeysMarginContainer" to="Player" method="_on_KeysMarginContainer_new_position"]
[connection signal="starting_position" from="StageTransitionManager/KeysMarginContainer" to="Player" method="_on_KeysMarginContainer_starting_position"]
[connection signal="tween_all_completed" from="StageTransitionManager/TransitionTween" to="StageTransitionManager" method="_on_TransitionTween_tween_all_completed"]
